--- a/Bootstrap/startup/style.css
+++ b/Bootstrap/startup/style.css
@@ -14,6 +14,9 @@ h1{
   font-size: 3rem;
   justify-content: center;
 }
+.buffer{
+  height: 10rem;
+}
 hr{
   border-color: #f05f44;
   border-width: 3px;
