--- a/css grid/layout/style.css
+++ b/css grid/layout/style.css
@@ -1,5 +1,6 @@
 body{
   margin: auto 0;
+  font-family: Arial;
 }
 .zone {
     /* padding:30px 50px;
@@ -19,18 +20,25 @@ body{
     -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
 }
-
 .main-nav{
   display: flex;
   list-style: none;
   font-size: 0.7em;
   margin: 0;
 }
+.sticky{
+  position: fixed;
+  top: 0;
+  width: 100%
+}
 @@media  only screen(max-width: 600px) {
   .main-nav{
     font-size: 0.5em;
     padding: 0;
   }
+}
+.cover{
+  width: 30rem;
 }
 li{
   padding: 20px;
@@ -59,7 +67,12 @@ a{
     padding: 130px;
     margin: 20px;
 }
-
+.box:hover {
+    -webkit-transform: rotate(-7deg);
+    -moz-transform: rotate(-7deg);
+    -o-transform: rotate(-7deg);
+    transform: rotate(-7deg);
+}
 .box > img {
     width: 100%;
 }
