--- a/css grid/layout/index.html
+++ b/css grid/layout/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
-  <nav class="zone blue sticky">
+  <nav class="zone green sticky">
     <ul class="main-nav">
       <li><a href=""> About </a></li>
       <li><a href=""> Products </a></li>
@@ -17,7 +17,7 @@
   <div class="container zone">
     <img class="cover"  src="./img/undraw.png" alt="">
   </div>
-  <div class="zone blue grid-wrapper">
+  <div class="zone yellow grid-wrapper">
     <div class="box zone">
       <img src="./img/data_storage_2_2.png" alt="">
     </div>
@@ -43,6 +43,6 @@
       <img src="./img/server_safe_2.png" alt="">
     </div>
   </div>
-  <footer class="zone yellow">Zero => Mastery</footer>
+  <footer class="zone blue">Zero => Mastery</footer>
 </body>
 </html>
